--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: radial-gradient(circle at top, #101622, #070c15),
-  url('assets/infected-bg.png') center center / cover no-repeat;
-  background: #000;
+  background: radial-gradient(circle at top, #101622, #070c15);
+
   background-blend-mode: overlay;
   color: white;
   overflow: hidden;
