--- a/style.css
+++ b/style.css
@@ -373,13 +373,13 @@ header {
   position: absolute;
   width: 40px;
   height: 40px;
-  background-image: url('assets/virus.png');
   background-size: contain;
   background-repeat: no-repeat;
-  opacity: 0.1;
-  filter: blur(2px) drop-shadow(0 0 8px #00ffe1);
+  opacity: 0.25; /* было 0.1 */
+  filter: drop-shadow(0 0 6px #00ffe1); /* убираем blur(2px) */
   animation: floatVirusRandom 15s linear infinite;
 }
+
 
 @keyframes floatVirusRandom {
   0% {
