--- a/style.css
+++ b/style.css
@@ -493,3 +493,11 @@ header {
   opacity: 0;
 }
 
+.transparent-hitbox {
+  /* ... твои свойства ... */
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
+  user-select: none;
+}
+
+
