--- a/style.css
+++ b/style.css
@@ -348,7 +348,6 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url('assets/infected-bg.png') center center / cover no-repeat;
   opacity: 0;
   pointer-events: none;
   z-index: 0;
@@ -396,15 +395,16 @@ header {
 }
 
 .spawned-virus {
-  position: absolute;
+  position: fixed; /* вместо absolute — т.к. теперь координаты глобальные */
   width: 30px;
   height: 30px;
   pointer-events: none;
   background-size: contain;
   background-repeat: no-repeat;
-  z-index: 10;
+  z-index: 100;
   animation: virusFly 1s ease-out forwards;
 }
+
 
 @keyframes virusFly {
   0% {
